tests/gql/snapshots/gql__snapshots__parse_merge_with_on_create_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Merge:
        pattern:
          elements:
            - Node:
                variable: p
                labels:
                  - Person
                properties:
                  - - name
                    - String: Alice
                where_clause: ~
        on_create:
          - target:
              variable: p
              property: created
            value:
              Literal:
                Bool: true
        on_match: ~
  foreach_clauses: []
  return_clause: ~
